--- a/CafeSit/style.css
+++ b/CafeSit/style.css
@@ -337,45 +337,45 @@ section {
   line-height: 1.8;
 }
 
-.menu .box-conteainer {
+.menu .box-container {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
   gap: 1.5rem;
 }
 
-.menu .box-conteainer .box {
+.menu .box-container .box {
   padding: 5rem;
   text-align: center;
   border: var(--border);
 }
 
-.menu .box-conteainer .box img {
+.menu .box-container .box img {
   height: 10rem;
 }
 
-.menu .box-conteainer .box h3 {
+.menu .box-container .box h3 {
   color: #fff;
   font-size: 2rem;
   padding: 1rem 0;
 }
 
-.menu .box-conteainer .box .price {
+.menu .box-container .box .price {
   color: #fff;
   font-size: 2.5rem;
   padding: 0.5rem 0;
 }
 
-.menu .box-conteainer .box .price span {
+.menu .box-container .box .price span {
   font-size: 1.5rem;
   text-decoration: line-through;
   font-weight: lighter;
 }
 
-.menu .box-conteainer .box:hover {
+.menu .box-container .box:hover {
   background: #fff;
 }
 
-.menu .box-conteainer .box:hover > * {
+.menu .box-container .box:hover > * {
   color: var(--black);
 }
 
@@ -436,4 +436,41 @@ section {
   text-decoration: line-through;
   font-weight: lighter;
   font-size: 1.5rem;
+}
+
+.review .box-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+  gap: 1.5rem;
+}
+
+.review .box-container .box {
+  border: var(--border);
+  text-align: center;
+  padding: 3rem 2rem;
+}
+
+.review .box-container .box p {
+  font-size: 1.5rem;
+  line-height: 1.8rem;
+  color: #fff;
+  padding: 2rem 0;
+}
+
+.review .box-container .box .user {
+  height: 7rem;
+  width: 7rem;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.review .box-container .box h3 {
+  padding: 1rem 0;
+  font-size: 2rem;
+  color: #fff;
+}
+
+.review .box-container .box .stars i {
+  font-size: 1.5rem;
+  color: var(--main-color);
 }
